Fix highlight speed and menu and picture overlay on safari

--- a/src/WorkPage.scss
+++ b/src/WorkPage.scss
@@ -128,7 +128,7 @@
 
   img {
     max-width: 617px;
-    transform: translate3d(0, -19%, 1px) scale(0.9);
+    transform: translate3d(0, -19%, 1.5px) scale(0.8);
   }
 }
 
@@ -137,7 +137,7 @@
 
   img {
     max-width: 536px;
-    transform: translate3d(0, -27%, 0.5px) scale(0.95);
+    transform: translate3d(0, -27%, 1.5px) scale(0.8);
     width: 88.7%;
   }
 }
@@ -147,7 +147,7 @@
 
   img {
     width: 35.37%;
-    transform: translate3d(0, -27%, 1px) scale(0.9);
+    transform: translate3d(0, -27%, 1.5px) scale(0.8);
   }
 }
 
@@ -156,7 +156,7 @@
 
   img {
     top: 80px;
-    transform: translate3d(0, 0, 0.5px) scale(0.95);
+    transform: translate3d(0, 0, 1.5px) scale(0.8);
   }
 }
 
