--- a/src/common.scss
+++ b/src/common.scss
@@ -257,7 +257,7 @@ a:hover::after {
   display: block;
   border-radius: 50px;
   top: 49%;
-  transition: background-position 0.4s ease-out;
+  transition: background-position 0.3s ease-out;
   left: 0px;
   z-index: -1;
 }
@@ -383,4 +383,6 @@ a:hover::after {
 
 .noscroll {
   overflow: hidden !important;
+  transition: perspective 0.2s linear;
+  perspective: 1px !important;
 }
